--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: rgb(3, 3, 65);
+  color: rgb(227, 188, 137);
 }
 
 h1 {
