--- a/src/components/AddTodoForm.module.css
+++ b/src/components/AddTodoForm.module.css
@@ -2,14 +2,15 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    font-size: 1.5rem;
+    width: 110%;
+    font-size: 2rem;
+    gap: .8rem;
 }
 
 .FormButton{
     background-color: black;
     color: white;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
 }
 
 .FormButton:hover{
@@ -19,20 +20,20 @@
 
 @media(max-width:768px){
     .InputForm {
-        font-size: 1.2rem;
+        font-size: 1.5rem;
     }
 
     .FormButton{
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 }
 
 @media(max-width: 480px){
     .InputForm {
-        font-size: 1rem;
+        font-size: 1.2rem;
     }
 
     .FormButton{
-        font-size: 0.8rem;
+        font-size: 1rem;
     }
 }
