--- a/src/components/TodoListItem.module.css
+++ b/src/components/TodoListItem.module.css
@@ -15,6 +15,12 @@
     font-size: 1.2rem;
 }
 
+.Checkbox {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
 .ListButton:hover {
     background-color: red;
     color: white;
